--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,48 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.gradient-background:hover {
+    background: radial-gradient(circle at bottom center, rgb(159, 179, 235) 30% , rgb(153, 193, 233) 70%, rgb(249,250,251) 100%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+
+
+
+.tapered-border {
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, transparent, blue, transparent);
+    transform: scaleY(0.5);
+    transform-origin: center;
+    transition: transform 0.5s ease;
+
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+
+.tapered-border::before {
+    content: '';
+    position: absolute;
+    top: -1px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background: inherit;
+    transform: scaleY(0.25);
+    transform-origin: center;
+    transition: transform 0.5s ease;
+
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.second-border{
+    opacity: 0;
+    transition: opacity 0.5s ease;
+
+}
+
+
+.show-border:hover .second-border{
+    display: block;
+    opacity: 1;
 }
