--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,6 @@
 @tailwind utilities;
 
 
-.gradient-background:hover {
-    background: radial-gradient(circle at bottom center, rgb(159, 179, 235) 30% , rgb(153, 193, 233) 70%, rgb(249,250,251) 100%);
-}
 
 
 
@@ -13,7 +10,7 @@
 .tapered-border {
     width: 100%;
     height: 1px;
-    background: linear-gradient(to right, transparent, blue, transparent);
+    background: linear-gradient(to right, transparent, rgb(46, 55, 71), transparent);
     transform: scaleY(0.5);
     transform-origin: center;
     transition: transform 0.5s ease;
